--- a/styles/_config/_variables.css
+++ b/styles/_config/_variables.css
@@ -1,30 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Variables */
 :root {
-  --black: #000000;
-  --white: #ffffff;
+  --black: #161616;
+  --white: #f7f7f7;
+  --green: #1fa66b;
+  --grey: #a4a4a4;
 
   --black-hsl: 0, 0%, 0%;
   --white-hsl: 0, 0%, 100%;
 
-  --pageBG: #f4f4f0;
-  --pageText: #000000;
+  --pageBG: #161616;
+  --pageText: #f7f7f7;
+  --pageParagraph: var(--grey);
 
-  --pageBG-hsl: 60, 14%, 95%;
-  --pageText-hsl: 0, 0%, 0%;
+  --pageBG-hsl: 0, 0%, 9%;
+  --pageText-hsl: 0, 0%, 97%;
+
+  --headerFont: 'Archivo Black';
+  --bodyFont: 'Montserrat';
 }
 
-[data-theme='dark'] {
-  --pageBG: #000000;
-  --pageText: #f4f4f0;
+[data-theme='light'] {
+  --pageBG: #f7f7f7;
+  --pageText: #161616;
+  --pageParagraph: var(--pageText);
 
-  --pageBG-hsl: 0, 0%, 0%;
-  --pageText-hsl: 60, 14%, 95%;
-}
-
-[data-theme='metal'] {
-  --pageBG: #000000;
-  --pageText: #FB1B15;
-
-  --pageBG-hsl: 0, 0%, 0%;
-  --pageText-hsl: 2, 92%, 53%;
+  --pageBG-hsl: 0, 0%, 97%;
+  --pageText-hsl: 0, 0%, 9%;
 }
