--- a/styles/base/_typography.css
+++ b/styles/base/_typography.css
@@ -14,11 +14,11 @@
   }
 
   body {
-    @apply bg-pageBG text-pageText font-sans leading-100;
+    @apply bg-pageBG text-pageText font-body leading-100;
   }
 
   p {
-    @apply m-0 text-16 leading-150;
+    @apply m-0 text-16 text-pageParagraph leading-150;
   }
 
   strong {
@@ -32,17 +32,17 @@
   /* Headlines */
   h1,
   .is-h1 {
-    @apply m-0 text-48 font-normal leading-125;
+    @apply m-0 text-center text-24 font-header  font-normal leading-125;
   }
 
   h2,
   .is-h2 {
-    @apply m-0 text-36 font-normal leading-125;
+    @apply m-0 text-36 font-header font-normal leading-125;
   }
 
   h3,
   .is-h3 {
-    @apply m-0 text-30 font-normal leading-125;
+    @apply m-0 text-30 font-header text-green font-normal leading-125;
   }
 
   h4,
@@ -76,7 +76,7 @@
   hr {
     @apply my-60 mx-0 border-0 h-1 bg-pageText;
   }
-  
+
   ::-moz-selection {
     @apply bg-pageText text-pageBG;
   }
@@ -107,7 +107,7 @@ details {
     .is-inverted & {
       outline-color: var(--pageBG);
     }
-    
+
     body:not(.is-tabbing) & {
       outline: none;
     }
@@ -127,12 +127,12 @@ ul {
     &:not(:last-child) {
       @apply mb-6;
     }
-    
+
     li {
       @apply mb-1;
-      
+
       &::before {
-        content: "+";
+        content: '+';
         @apply inline-block relative -ml-4 w-4;
       }
     }
@@ -154,11 +154,7 @@ h1,
   }
 
   .hero & {
-    font-size: clamp(
-      4rem,
-      calc(1.5rem + 3.5vw),
-      15rem
-    )
+    font-size: clamp(4rem, calc(1.5rem + 3.5vw), 15rem);
   }
 }
 
