--- a/styles/components/_counters.css
+++ b/styles/components/_counters.css
@@ -19,10 +19,10 @@
     }
 
     &:hover {
-      background: hsla(var(--pageText-hsl), .2);
+      background: hsla(var(--pageText-hsl), 0.2);
 
       .is-inverted & {
-        background: hsla(var(--pageBG-hsl), .2);
+        background: hsla(var(--pageBG-hsl), 0.2);
       }
     }
 
@@ -35,9 +35,9 @@
   input::-webkit-inner-spin-button {
     @apply m-0 appearance-none;
   }
-  
+
   &--amount {
-    @apply relative overflow-hidden w-48 text-12 font-mono;
+    @apply relative overflow-hidden w-48 text-12 font-body;
 
     .cart & {
       @apply w-32;
@@ -50,7 +50,7 @@
       .is-inverted & {
         outline-color: var(--pageBG);
       }
-      
+
       body:not(.is-tabbing) & {
         outline: none;
       }
@@ -64,10 +64,10 @@
     + .counter--input {
       @apply absolute inset-0;
     }
-    
+
     input {
       @apply relative bg-transparent border-0 rounded-none appearance-none p-4 w-full h-full text-center text-current text-16 outline-none;
-      font-feature-settings: "tnum";
+      font-feature-settings: 'tnum';
     }
   }
 }
