--- a/styles/base/_forms.css
+++ b/styles/base/_forms.css
@@ -1,6 +1,6 @@
 .form {
   @apply relative;
-  
+
   &--error {
     /* Error Message styles */
     @apply bg-pageBG border p-16 text-center;
@@ -9,7 +9,7 @@
       @apply mt-2;
     }
   }
-  
+
   &--success {
     /* Success Message styles */
     @apply bg-pageBG border p-16 text-center;
@@ -43,9 +43,10 @@
 
       .control {
         @apply sm:border-0;
-        
+
         &--label,
-        input {
+        input,
+        .input {
           @apply sm:px-0;
         }
 
@@ -72,7 +73,7 @@
 
       svg {
         @apply block flex-none mr-16 p-4 w-20 h-20 pointer-events-none border border-current transition-colors;
-        transition-delay: .15s;
+        transition-delay: 0.15s;
 
         input:checked + & {
           @apply bg-pageText;
@@ -87,7 +88,7 @@
 
           input:checked + & {
             stroke-dashoffset: 0;
-            transition-delay: .15s;
+            transition-delay: 0.15s;
           }
         }
       }
@@ -110,10 +111,11 @@
     @apply hidden;
   }
 
-  input[type="text"],
-  input[type="email"],
-  input[type="number"],
-  input[type="password"],
+  input[type='text'],
+  input[type='email'],
+  input[type='number'],
+  input[type='password'],
+  .input,
   textarea {
     @apply relative appearance-none w-full h-full px-16 py-8 rounded-none border font-inherit text-16 leading-100 bg-transparent text-pageText;
 
@@ -130,7 +132,7 @@
     }
   }
 
-  input[type="checkbox"] {
+  input[type='checkbox'] {
     @apply sr-only;
 
     &:focus {
@@ -141,7 +143,7 @@
         .is-inverted & {
           outline-color: var(--pageBG);
         }
-        
+
         body:not(.is-tabbing) & {
           outline: none;
         }
