--- a/styles/base/_forms.css
+++ b/styles/base/_forms.css
@@ -20,7 +20,7 @@
   @apply flex flex-col relative text-left;
 
   &--group {
-    @apply grid gap-y-8 grid-cols-1 sm:grid-cols-2;
+    @apply grid gap-y-8 grid-cols-1 sm:grid-cols-2  mb-14;
 
     &.is-inline {
       @apply sm:flex;
