created event and event-list and corresponding schemas

--- a/styles/app.css
+++ b/styles/app.css
@@ -11,6 +11,7 @@
 @import 'base/_page';
 
 @import 'components/_accordions';
+@import 'components/_events';
 @import 'components/_carousels';
 @import 'components/_counters';
 @import 'components/_cursors';
