--- a/styles/components/_marquees.css
+++ b/styles/components/_marquees.css
@@ -66,7 +66,7 @@
 
 .marquee {
   @apply border-b;
-  
+
   &--item {
     @apply flex;
   }
@@ -79,7 +79,8 @@
     @apply relative w-120 sm:w-200 px-32 py-16 sm:px-48 sm:py-32;
 
     [data-theme='metal'] & {
-      filter: invert(43%) sepia(83%) saturate(3151%) hue-rotate(337deg) brightness(92%) contrast(111%);
+      filter: invert(43%) sepia(83%) saturate(3151%) hue-rotate(337deg)
+        brightness(92%) contrast(111%);
     }
 
     img {
