footer first draft complete

--- a/styles/components/_footer.css
+++ b/styles/components/_footer.css
@@ -1,12 +1,28 @@
 .footer {
   @apply relative overflow-hidden;
-  
+
   &--grid {
     @apply grid sm:grid-cols-2 lg:grid-cols-4 gap-1 bg-pageText;
+
+    &.blocks0 {
+      @apply grid-cols-1;
+    }
+
+    &.blocks1 {
+      @apply grid-cols-2;
+    }
   }
 
   &--block {
     @apply flex flex-col p-32 bg-pageBG text-center lg:text-left;
+
+    &.blocks0 {
+      @apply lg:text-center;
+    }
+
+    &.blocks1 {
+      @apply place-content-center text-left;
+    }
   }
 
   .form {
