--- a/styles/components/_events.css
+++ b/styles/components/_events.css
@@ -1,40 +1,7 @@
-/* .accordion-group {
-    &:not(:last-child) {
-      @apply mb-48;
-    }
-  }
-  
-  .accordion {
-    @apply w-full border-t;
-    
-    &--toggle {
-      @apply clean-btn text-left flex justify-between items-center px-0 py-16 w-full bg-transparent font-semibold text-18 leading-135;
-    }
-  
-    &--icon {
-      @apply flex-shrink-0 block relative ml-32 w-12 h-12;
-      transition: .3s cubic-bezier(0.22, 1, 0.36, 1);
-  
-      svg {
-        @apply block;
-      }
-  
-      .is-open & {
-        @apply rotate-180;
-      }
-    }
-  
-    &--content {
-      @apply overflow-hidden;
-    }
-  
-    &--inner {
-      @apply m-0 pb-48 max-w-2xl;
-    }
-  } */
+
 
 .event {
-  @apply grid grid-cols-4 w-full;
+  @apply grid grid-cols-4 w-full border-t;
 
   &--date {
     @apply sm:col-span-1 col-span-4 sm:row-start-1;
@@ -50,6 +17,23 @@
   }
 
   &--toggle {
-    color: var(--green);
+    @apply clean-btn text-left flex justify-between items-start px-0 py-16 bg-transparent font-semibold text-18 leading-135;
+  color: var(--green);
+
   }
+
+  &--icon {
+    @apply flex-shrink-0 block relative ml-32 w-12 h-12 px-0 py-21;
+    transition: .3s cubic-bezier(0.22, 1, 0.36, 1);
+
+    svg {
+      @apply block;
+    }
+
+    .is-open & {
+      @apply rotate-180 px-0 py-35;
+    }
+  }
+
+ 
 }
