changes home page structure

--- a/styles/base/_typography.css
+++ b/styles/base/_typography.css
@@ -18,7 +18,7 @@
   }
 
   p {
-    @apply m-0 text-16 text-pageParagraph leading-150;
+    @apply m-0 text-20 text-pageParagraph leading-150;
   }
 
   strong {
@@ -37,7 +37,7 @@
 
   h2,
   .is-h2 {
-    @apply m-0 text-36 font-header font-normal leading-125;
+    @apply m-0 text-36 font-header font-normal text-green leading-125;
   }
 
   h3,
